# latino-lib-ejemplo

./: .gitignore  CMakeLists.txt  README.md  ejemplo.lat
src/: latino-libejemplo.c
